@@ -77,7 +77,6 @@ extern struct ctx {
 		gpuCmdFacet cmdFacet;
 		gpuVector vectors[MAX_FACET_SIZE+2*GPU_NB_CLIPPLANES];
 		int32_t nc_declived, nc_declived_next;
-		uint32_t bbox[3][2];
 		int32_t decliveness;
 		uint32_t scan_dir;
 		int32_t nc_dir;
@@ -87,7 +86,7 @@ extern struct ctx {
 		uint32_t nb_vectors;	// gives how many vectors are in vectors. For the size of facet, see cmdFacet.size.
 		int32_t z_alpha;
 		int32_t z_alpha_next;
-		int64_t z_num, z_den;	// 24.16
+		int64_t z_num, z_den;	// 32.32
 		int32_t z_dden, z_dnum;	// 16.16
 	} poly;
 	// Current trapeze
